cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/DocuSign_Recipient_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Store the configurations for DocuSign recipients</description>
    <label>DocuSign Recipient Configuration</label>
    <pluralLabel>DocuSign Recipient Configurations</pluralLabel>
</CustomObject>