cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/fields/Date_Signed_Tab_Anchor_String__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_Tab_Anchor_String__c</fullName>
    <label>Date Signed Tab Anchor String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>