cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signer</fullName>
                <default>true</default>
                <label>Signer</label>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Intermediary</fullName>
            </value>
            <value>
                <fullName>Carbon copy</fullName>
            </value>
            <value>
                <fullName>Certified delivery</fullName>
            </value>
            <value>
                <fullName>In person signer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>