cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/fields/Signing_Group__c.field-meta.xml
<CustomField>
    <fullName>Signing_Group__c</fullName>
    <label>Signing Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endorser</fullName>
                <default>true</default>
                <label>Endorser</label>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>