cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/fields/Signing_Method__c.field-meta.xml
<CustomField>
    <fullName>Signing_Method__c</fullName>
    <label>Signing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
                <default>true</default>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>