cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/fields/Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Signing_Order__c</fullName>
    <label>Signing Order</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>