cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/fields/Signing_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Signing_Scenario__c</fullName>
    <label>Signing Scenario</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Customer sign in place</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Customer sign via email</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Used Car Agreement - Customer sign in-place</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Used Car Agreement - Customer sign via email</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>MB Sales Agreement - Customer sign in-place</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>MB Sales Agreement - Customer sign via email</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>MB UCA - Customer sign via email</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>MB UCA - Customer sign in-place</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>MB SAUCA - Customer sign in-place</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>MB SAUCA - Customer sign via email</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>MB CRF - Customer sign in-place</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>MB CRF - Customer sign via email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>