cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/fields/Signing_Tab_Anchor_String__c.field-meta.xml
<CustomField>
    <fullName>Signing_Tab_Anchor_String__c</fullName>
    <description>The anchor string of signing tab, leave empty if no need signing tab</description>
    <inlineHelpText>The anchor string of signing tab, leave empty if no need signing tab</inlineHelpText>
    <label>Signing Tab Anchor String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>