cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/listViews/Customer_sign_via_email_scenario.listView-meta.xml
<ListView>
    <fullName>Customer_sign_via_email_scenario</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>Customer__c</columns>
    <columns>Sales_Consultant__c</columns>
    <columns>Recipient_Type__c</columns>
    <columns>Signing_Group__c</columns>
    <columns>Signing_Method__c</columns>
    <columns>Signing_Order__c</columns>
    <columns>Signing_Scenario__c</columns>
    <columns>Signing_Tab_Anchor_String__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Signing_Scenario__c</field>
        <operation>equals</operation>
        <value>B</value>
    </filters>
    <label>Customer sign via email scenario</label>
</ListView>