cncProd/force-app/main/default/objects/DocuSign_Recipient_Configuration__mdt/listViews/UCA_Customer_sign_in_place.listView-meta.xml
<ListView>
    <fullName>UCA_Customer_sign_in_place</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>Customer__c</columns>
    <columns>Used_Car_Seller__c</columns>
    <columns>Sales_Consultant__c</columns>
    <columns>Recipient_Type__c</columns>
    <columns>Signing_Group__c</columns>
    <columns>Signing_Method__c</columns>
    <columns>Signing_Order__c</columns>
    <columns>Signing_Scenario__c</columns>
    <columns>Signing_Tab_Anchor_String__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Signing_Scenario__c</field>
        <operation>equals</operation>
        <value>C</value>
    </filters>
    <label>UCA_Customer sign in-place</label>
</ListView>